--- a/styles.css
+++ b/styles.css
@@ -77,3 +77,44 @@ body {
 .dot.active {
     background-color: #717171;
 }
+
+/* Style the tabs */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+    margin-bottom: 20px;
+  }
+  
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: #f1f1f1; /* non-active tab background color */
+    color: #888; /* non-active tab text color */
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    font-weight: bold;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #5d88fe; /* active tab background color */
+    color: white; /* active tab text color */
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
