--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,13 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
     background-color: #f4f4f4;
 }
 
 .content-container {
-    display: block;
-    overflow-y: auto;
-    min-height: 100vh;
-    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 20px;
-    box-sizing: border-box;
 }
 
 .content-container img {
@@ -22,6 +18,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
 .horizontal-section {
     display: flex;
     overflow-x: auto;
@@ -81,40 +78,46 @@ body {
 /* Style the tabs */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
+    border: 3px solid #ccc; /* Increase border thickness */
     background-color: #f1f1f1;
     margin-bottom: 20px;
-  }
-  
+    border-radius: 5px; /* Add rounded corners */
+}
+
+
 /* Style the buttons inside the tab */
 .tab button {
-    background-color: #f1f1f1; /* non-active tab background color */
-    color: #888; /* non-active tab text color */
+    background-color: #f1f1f1;
+    color: #444;
     float: left;
     border: none;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    font-size: 17px;
+    font-size: 20px; /* Increase font size */
     font-weight: bold;
-  }
-  
+    border-right: 1px solid #ccc; /* Add a border between tabs */
+}
+
+.tab button:last-child {
+    border-right: none; /* Remove border from last tab */
+}
   /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #ddd;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
-    background-color: #5d88fe; /* active tab background color */
-    color: white; /* active tab text color */
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
+.tab button:hover {
+background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+background-color: #5d88fe; /* active tab background color */
+color: white; /* active tab text color */
+}
+
+/* Style the tab content */
+.tabcontent {
     display: none;
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
-  }
+}
