--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .content-container {
-    max-width: 1400px;
+    max-width: 1600px;
     margin: 0 auto;
     padding: 10px;
 }
@@ -34,13 +34,13 @@ body {
 }
 
 .horizontal-item {
-    width: 78vw;
+    width: 85vw;
     scroll-snap-align: start;
     padding: 10px;
     flex-shrink: 0;
     box-sizing: border-box;
-    text-align: center;
-    font-size: 2em;
+    text-align: left;
+    font-size: 1.5em;
     background: #f0f0f0;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -115,4 +115,59 @@ color: white; /* active tab text color */
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+.centered-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px; /* Adjust as needed */
+}
+
+.form-container {
+    width: 95%;
+    max-width: 95%; /* Prevent the form from becoming too wide on large screens */
+    padding: 40px;
+    background-color: white; /* White background */
+    border-radius: 8px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+}
+.form-container {
+    width: 90%; /* Increase from 80% to 90% */
+    max-width: 800px; /* Prevent the form from becoming too wide on large screens */
+    padding: 40px;
+    background-color: white; /* White background */
+    border-radius: 8px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+}
+.form-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container h2 {
+    margin-bottom: 20px;
+}
+
+.form-container label {
+    font-size: 1.2em;
+    margin-bottom: 10px;
+}
+
+.form-container input[type="text"] {
+    padding: 10px;
+    font-size: 1em;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+}
+
+.form-container input[type="submit"] {
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: none;
+    color: #fff;
+    background-color: #007BFF;
+    cursor: pointer;
+    font-size: 1.2em;
 }
